--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
   <EditTextPreference
-    android:key="booksServer"
-    android:title="URL of the Books Server"
-    android:summary="Complete URL including protocol"/>
+    android:key="dotStarServer"
+    android:title="DotStarServerURL"
+    android:summary="Complete URL to the DotStarServer including protocol, hostname and port. e.g. http://osmc.local:4567" />
 </PreferenceScreen>
