added mdns client to find all dotstar installations in the network

--- a/app/src/main/res/layout-w900dp/preset_list.xml
+++ b/app/src/main/res/layout-w900dp/preset_list.xml
@@ -12,7 +12,7 @@
               tools:context=".Index">
 
   <!--
-  This layout is a two-pane layout for the Presets
+  This layout is activity two-pane layout for the Presets
   master/detail flow.
 
   -->
